Updated auth client ID

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+  <head>
+  <meta name="google-signin-client_id" content="894790475948-71igkfabjstv8ohtj3ak8emilql9q9l4.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  </head>
   <body>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
   </body>
 </html>
