Working on login screen.

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
   </head>
   <body>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <footer>
+    &copy; 2015 Billo Systems Ltd. Co.
+    </footer>
   </body>
 </html>
