--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-  <meta name="google-signin-client_id" content="894790475948-71igkfabjstv8ohtj3ak8emilql9q9l4.apps.googleusercontent.com">
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Login Page for Billo Systems Services Accounts">
+    <meta name="google-signin-client_id" content="894790475948-71igkfabjstv8ohtj3ak8emilql9q9l4.apps.googleusercontent.com">
+    <link rel="icon" href="http://billo.systems/images/favicon.png">
+
+    <title>BilloSystems Service Account Login</title>
+
+    <link type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <link type="text/css" href="css/login.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
+
   <body>
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
-    <footer>
-    &copy; 2015 Billo Systems Ltd. Co.
+
+    <div class="container">
+      <div class="page-header">
+        <h1>Login</h1>
+      </div>
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    </div>
+
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted" style="float:right;">&copy; 2015 Billo Systems Ltd. Co.</p>
+        <img src="images/footer.png" class="img-responsive" />
+      </div>
     </footer>
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
