More of the login page is in place.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@
   </head>
 
   <body>
-
-    <div class="container">
-      <div class="page-header">
-        <h1>Login</h1>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+          <h1>Login</h1>
+        </div>
       </div>
-      <div class="g-signin2" data-onsuccess="onSignIn"></div>
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4 login-box">
+          <p class="lead">To create an account with Billo Systems or to log into one that
+          already exists, sign into your Google account:</p>
+          <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        </div>
+      </div>
+    </div>
     </div>
 
     <footer class="footer">
