--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
   <body>
     <div class="container-fluid">
       <div class="row">
+        <div class="col-md-12 login-pad">
+          &nbsp;
+        </div>
+      </div>
+      <div class="row">
         <div class="col-md-4 col-md-offset-4">
           <h1>Login</h1>
+        </div>
+        <div class="col-md-4">
+          <img style="float: right;" src="images/logo.png" />
         </div>
       </div>
       <div class="row">
@@ -35,12 +43,16 @@
           <div class="g-signin2" data-onsuccess="onSignIn"></div>
         </div>
       </div>
+      <div class-"row">
+        <div class="col-md-5 col-md-offset-5">
+          <p class="text-muted copyright">&copy; 2015 Billo Systems Ltd. Co.</p>
+        </div>
+      </div>
     </div>
     </div>
 
     <footer class="footer">
       <div class="container">
-        <p class="text-muted" style="float:right;">&copy; 2015 Billo Systems Ltd. Co.</p>
         <img src="images/footer.png" class="img-responsive" />
       </div>
     </footer>
