--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope itemtype="http://schema.org/Article">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
 
     <title>BilloSystems Service Account Login</title>
 
-    <link type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
     <link type="text/css" href="css/login.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -18,33 +18,53 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer></script>
+  <script src="/js/login.js"></script>
+  <script>
+  $(document).ready(function() {
+    console.log("doing on-ready ...");
+    $('#signInBtn').on('click', doBilloSignIn);
+    $('#signOutBtn').on('click', doBilloSignOut);
+  });
+  </script>
   </head>
 
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-12 login-pad">
-          &nbsp;
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-          <h1>Login</h1>
-        </div>
-        <div class="col-md-4">
+        <div class="col-sm-1 col-sm-offset-11 login-pad">
           <img style="float: right;" src="images/logo.png" />
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 col-md-offset-4 login-box">
+        <div class="col-sm-4 col-sm-offset-4">
+          <h1>Login</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 col-sm-offset-4 login-box">
           <p class="lead">To create an account with Billo Systems or to log into one that
           already exists, sign into your Google account:</p>
-          <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+  <div id="gSignInWrapper">
+    <div id="signInBtn" class="customGPlusSignIn">
+      <span class="icon">g</span>
+      <span class="buttonText">Google</span>
+    </div>
+  </div>
+
+  <div id="gSignInWrapper">
+    <div id="signOutBtn" class="customGPlusSignIn">
+      <span class="icon">g</span>
+      <span class="buttonText">Sign Out</span>
+    </div>
+  </div>
+
         </div>
       </div>
       <div class-"row">
-        <div class="col-md-5 col-md-offset-5">
+        <div class="col-sm-5 col-sm-offset-5">
           <p class="text-muted copyright">&copy; 2015 Billo Systems Ltd. Co.</p>
         </div>
       </div>
@@ -53,12 +73,9 @@
 
     <footer class="footer">
       <div class="container">
-        <img src="images/footer.png" class="img-responsive" />
+        <img src="images/footer.png" class="img-responsive footer-scene" />
       </div>
     </footer>
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
